styles.css
/* ... */
.section5 .items {
  width: 23%;
  margin: 8px 8px 8px 8px;
  height: 300px;
  display: flex;
  flex-direction: column;
}

.section5 .items img {
  background-color: black;
  width: 100%;
  height: 60%;
}

.footer {
  margin-top: 20px;
  height: 150px;
  background-color: rgba(3, 3, 3, 0.801);
}

.footer1 {
  height: 150px;
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.footer2 {
  background-color: black;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer2 div {
  text-align: center;
  width: 50%;
  align-items: center;
  justify-content: center;
  font-size: 15px;
  line-height: 20px;
}

#love {
  color: red;
}

.foot1 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100px;
  width: 400px;
}

.foot2 {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 20px;
  width: 400px;
  font-size: 13px;
}

.listss {
  display: inline-flex;
  width: 500px;
  justify-content: space-evenly;
  list-style-type: none;
}

.section5 .items img:hover {
  cursor: pointer;
}

.section3 .addlinks ul li:hover {
  color: black;
}

.items .time strong:hover {
  cursor: pointer;
  color: #363636;
}

.items p:hover {
  color: #f42;
  cursor: pointer;
  text-decoration: underline;
}

h2:hover {
  color: black;
}

.nav2 a:hover {
  color: black;
}

.foot1 a:hover {
  background-color: black;
  color: white;
}

@media only screen and (max-width: 768px) {
  .nav1,
  .nav2 {
    display: none;
  }

  .nav-small {
    display: flex;
    width: 100%;
    position: fixed;
    background-color: white;
  }

  .nav3 {
    height: 55px;
    justify-content: space-around;
    position: fixed;
    width: 100%;
    top: 50px;
    padding-left: 1px;
  }

  .section1 {
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    height: 70vh;
  }

  .banner .banner-heading h3 {
    font-size: 20px;
  }

  .banner .logo {
    display: none;
  }

  .banner {
    width: 99%;
    height: 33%;
  }

  .banner-side {
    width: 99%;
    height: 66%;
  }

  .section2 .latestnews,
  .section5 .latestnews {
    display: flex;
    flex-direction: column;
  }

  .section2 .latestnews .items,
  .section5 .latestnews .items {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 70px;
  }

  .section5 .latestnews .items img,
  .section2 .latestnews .items img {
    width: 70px;
    height: 70px;
    margin-right: 10px;
  }

  .section5 .latestnews .items p,
  .section2 .latestnews .items p {
    font-size: 12px;
  }

  .section3 {
    width: 90%;
  }

  .section3 .addlinks {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .fundings {
    width: 100%;
  }

  .latestfundings {
    display: flex;
    flex-direction: column;
  }

  .section3 .addlinks ul {
    display: flex;
    flex-direction: column;
  }

  .section3 .addlinks ul li {
    border-right: none;
  }

  .section4 article {
    display: flex;
    flex-direction: column;
    width: 98%;
    margin-top: 80px;
  }

  .section4 {
    width: 100%;
    display: flex;
    flex-direction: column;
  }

  .section4 .gradient {
    height: 50%;
  }

  .section5 {
    margin-top: 80px;
  }

  .section5 .addlinks {
    display: flex;
    flex-direction: row;
  }
}

@media (min-width: 769px) and (max-width: 1024px) {
  .nav2 .hide {
    display: none;
  }

  .nav1 {
    margin-left: 100px;
    position: fixed;
    width: 90%;
    margin-right: 2px;
  }

  .nav2 {
    margin: 0 0 0 100px;
    position: fixed;
    width: 90%;
    background-color: white;
    top: 30px;
  }

  .nav3 {
    position: fixed;
    width: 100%;
    top: 70px;
    padding-left: 130px;
  }

  nav .logo {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    width: 100px;
    height: 80px;
    background-color: rgb(243, 30, 30);
  }

  .banner .logo {
    display: none;
  }

  nav .logo img {
    width: 70px;
    height: 70px;
  }

  .section1 {
    margin-top: 100px;
    height: 60vh;
  }

  .banner .banner-heading h3 {
    font-size: 30px;
    margin-top: 20%;
  }

  .section2 {
    width: 99%;
  }

  .section2 .latestnews .items {
    width: 30%;
  }

  .section3 {
    width: 99%;
  }

  .section3 .addlinks {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .section3 .latestfundings .funding1 {
    display: none;
  }

  .section3 .latestfundings .fundings {
    width: 33%;
  }

  .section4 {
    width: 100%;
  }

  .section4 article {
    width: 48%;
    margin: auto;
  }

  .section5 {
    width: 99%;
  }

  .section5 .latestnews .items {
    width: 30%;
  }
}

